Setup search tree logic

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -33,6 +33,16 @@ public net.minecraft.world.level.levelgen.SurfaceRules$LazyYCondition
 public net.minecraft.world.level.levelgen.SurfaceRules$Condition
 public net.minecraft.world.level.levelgen.SurfaceRules$SequenceRuleSource
 public net.minecraft.world.level.biome.MultiNoiseBiomeSource <init>(Lnet/minecraft/world/level/biome/Climate$ParameterList;)V
+public net.minecraft.world.level.biome.Climate$TargetPoint m_187016_()[J # toParameterArray
+public net.minecraft.world.level.biome.Climate$DistanceMetric
+public net.minecraft.world.level.biome.Climate$RTree
+public net.minecraft.world.level.biome.Climate$RTree$Node
+public net.minecraft.world.level.biome.Climate$RTree$Node m_186959_([J)J # distance
+public net.minecraft.world.level.biome.Climate$RTree$Leaf
+public net.minecraft.world.level.biome.Climate$RTree$Leaf f_186948_ # value
+public net.minecraft.world.level.biome.Climate$RTree$SubTree
+public net.minecraft.world.level.biome.Climate$RTree$SubTree f_186965_ # children
+public net.minecraft.world.level.biome.Climate$ParameterList f_186847_ # index
 public-f net.minecraft.world.level.chunk.ChunkGenerator f_223020_ # featuresPerStep
 public net.minecraft.world.entity.animal.Parrot f_29358_ # MOB_SOUND_MAP
 protected net.minecraft.world.entity.item.FallingBlockEntity f_31946_ # blockState
