--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,7 @@
 architectury {
-    common(rootProject.enabled_platforms.split(","))
+    common(rootProject.enabled_platforms.split(",")) {
+        it.platformPackage "neoforge", "forge"
+    }
 }
 
 loom {
@@ -10,14 +12,6 @@ dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-}
-
-processResources {
-    inputs.property "mod_id", project.mod_id
-
-    filesMatching(["architectury.common.json"]) {
-        expand "mod_id": project.mod_id
-    }
 }
 
 publishing {
