--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -4,7 +4,9 @@ plugins {
 
 architectury {
     platformSetupLoomIde()
-    neoForge()
+    neoForge {
+        platformPackage = "forge"
+    }
 }
 
 loom {
