ADd block registry helper

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -8,13 +8,12 @@ modId = "${mod_id}"
 version = "${mod_version}"
 displayName = "${mod_name}"
 authors = "Team Abnormals"
-credits = "SmellyModder, bageldotjpg, Jackson"
+credits = "SmellyModder, bageldotjpg, Jackson, ebo2022"
 logoFile = "logo.png"
 itemIcon = "minecraft:creeper_head"
 configBackground = "blueprint:textures/blueprint.png"
 displayURL = "${homepage}"
 description = "${mod_description}"
-#logoFile = ""
 
 [[mixins]]
 config = "${mod_id}.mixins.json"
